--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,10 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Cake
+tools/*
+!tools/packages.config
+
+# SonarQube
+.sonarqube/
