--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,5 +2,6 @@ version: 1.0.{build}
 image: Visual Studio 2017
 install:
   - dotnet tool install -g dotnet-reqube
+  - dotnet tool install -g Cake.Tool --version 0.31.0 
 build_script:
-- cmd: PowerShell -Version 2.0 .\build.ps1
+- cmd: dotnet cake
